# activity_monitoring

./: LAUNCH.txt  build_client.bat  start_server.bat
client/: CMakeLists.txt  install_client.bat  main_simple.cpp
server/: main.py  requirements.txt
